--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" type="images/x-icon" href="../assets/img/favicon.png" />
     <!-- font -->
- 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- icon -->
     <link
       rel="stylesheet"
@@ -40,18 +45,111 @@
       </div>
     </nav>
     <header>
-      <div class="opasity"></div>
+      <div class="header-opasity"></div>
       <div class="content">
         <h1>Your Favorite Place for Free Bootstrap Themes</h1>
-        <div class="header-line"></div>
+        <div class="line"></div>
         <p>
           Start Bootstrap can help you build better websites using the Bootstrap
           framework! Just download a theme and start customizing, no strings
           attached!
         </p>
-        <button class="btn">FIND OUT MORE</button>
+        <button>FIND OUT MORE</button>
       </div>
     </header>
+
+    <section id="section-download">
+      <div class="section-download-content">
+        <h2>We've got what you need!</h2>
+        <div class="section-line"></div>
+        <p>
+          Start Bootstrap has everything you need to get your new website up and
+          running in no time! Choose one of our open source, free to download,
+          and easy to use themes! No strings attached!
+        </p>
+        <button>GET STARTED!</button>
+      </div>
+    </section>
+    <section id="service">
+      <div class="content">
+        <h2>At Your Service</h2>
+        <div class="line"></div>
+      </div>
+      <div class="cards">
+        <div class="card-content">
+          <div class="card">
+            <div><i class="fa-regular fa-gem"></i></div>
+            <h3>Sturdy Themes</h3>
+            <p>Our themes are updated regularly to keep them bug free!</p>
+          </div>
+          <div class="card">
+            <div><i class="fa-solid fa-laptop"></i></div>
+            <h3>Up to Date</h3>
+            <p>All dependencies are kept current to keep things fresh.</p>
+          </div>
+        </div>
+        <div class="card-content">
+          <div class="card">
+            <div><i class="fa-solid fa-globe"></i></div>
+
+            <h3>Ready to Publish</h3>
+            <p>You can use this design as is, or you can make changes!</p>
+          </div>
+          <div class="card">
+            <div><i class="fa-regular fa-heart"></i></div>
+
+            <h3>Made with Love</h3>
+            <p>Is it really open source if it's not made with love?</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="section-images">
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+      <div>
+        <img src="assets/img/project-img.jpg" />
+      </div>
+    </section>
+    <section id="free-download">
+      <h2>Free Download at Start Bootstrap!</h2>
+      <button>DOWNLOAD NOW</button>
+    </section>
+    <section id="form">
+      <div class="form-content">
+        <h2>Let's Get In Touch!</h2>
+        <div class="line"></div>
+        <p>
+          Ready to start your next project with us? Send us a messages and we
+          will get back to you as soon as possible!
+        </p>
+      </div>
+      <div>
+        <form>
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email" />
+          <input type="text" placeholder="Phone number" />
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <input type="submit" />
+        </form>
+      </div>
+    </section>
+    <footer><p>Copyright © 2023 - Company Name</p></footer>
     <script>
       const nav = document.getElementById("navbar");
 
